# supplier/api/controllers/product.js
@@ -1,20 +1,43 @@
-module.exports={save}
+module.exports = { save, getOne ,update};
 var crypto = require("crypto");
 var db = require("../../config/db")();
 const mongo = require("mongodb").MongoClient;
 const url = "mongodb://localhost:27017";
-const dbName = "supplier";
-const colname = "product";
+// rs
 function save(req, res, next) {
-    let product = {
-      name: req.body.name,
-      productId: crypto.randomBytes(20).toString("hex"),
-      amount: req.body.amount,
-      price: req.body.price,
-      url:req.body.url
-    };
+  let product = {
+    name: req.body.name,
+    productId: crypto.randomBytes(20).toString("hex"),
+    amount: req.body.amount,
+    price: req.body.price,
+    url: req.body.url
+  };
+  res.json({
+    success: db.save(req.body),
+    description: "product added to the list!"
+  });
+}
+function getOne(req, res, next) {
+  var productId = req.swagger.params.productId.value;
+  //req.swagger contains the path parameters
+
+  db.find(productId, function(item) {
+    if (item) {
+      res.json(item);
+    } else {
+      res.status(204).send();
+    }
+  });
+}
+function update(req, res, next) {
+  var productId = req.swagger.params.productId.value; //req.swagger contains the path parameters
+  var product = {
+    amount: req.body.amount
+  };
+  if (db.update(productId, product)) {
     res.json({
-      success: db.save(req.body),
-      description: "account added to the list!"
+      success: db.update(productId, product),
+      description: "product updated to the list!"
     });
   }
+}
